updated intro in the index.html
updated the intro

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="col-lg-6">
                 <h1 class="name">Matthew Lee</h1>
                 <h5><em>Engineering in Training</em></h5>
-                <p class="description">I am a self-motivated, learning-by-doing EIT, looking for exciting and dynamic opportunities to make me a well-rounded individual so that I can make a contribution to the world.</p>
+                <p class="description">I am a self-motivated, learning-by-doing EIT, looking for exciting and dynamic opportunities to make me a well-rounded engineer and make a contribution to the world.</p>
             </div>
         </div>
 
