--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
             </div>
             <div class="col-lg-6">
                 <h1 class="name">Matthew Lee</h1>
-                <h5><em>Engineering in Training</em></h5>
-                <p class="description">I am a self-motivated, learning-by-doing EIT, looking for exciting and dynamic opportunities to make me a well-rounded engineer and make a contribution to the world.</p>
+                <h4><em>P.Eng.</em></h4>
+                <p class="description">I am a self-motivated, learning-by-doing person, looking for exciting and dynamic opportunities to make me a well-rounded engineer and contribute to the world.</p>
             </div>
         </div>
 
@@ -196,7 +196,31 @@
 
     <div id="experience-carousel" class="carousel slide carousel-fade" data-ride="carousel">
         <div class="carousel-inner">
+
             <div class="carousel-item active container-fluid">
+                <p class="experience-title"><strong>Supervisor, Mechanical Engineer</strong>, E-One Moli Energy Ltd., Maple Ridge, BC</p>
+                <ul class="list-group">
+                    <li class="list-group-item bg-transparent w-75 experience-item">Received general assignment of projects from engineer director and break down assigned work/tasks into sub-tasks and distributed to team members for execution</li>
+                    <li class="list-group-item bg-transparent w-75 experience-item">Provided feedback and guidance to team members</li>
+                    <li class="list-group-item bg-transparent w-75 experience-item">Communicated with vendors to source lithium-ion batteries manufacturing equipment</li>
+                </ul>
+                <p class="duration"><em>Jun. 2024 – present</em></p>
+            </div>
+
+            <div class="carousel-item container-fluid">
+                <p class="experience-title"><strong>Mechanical Engineer</strong>, E-One Moli Energy Ltd., Maple Ridge, BC</p>
+                <ul class="list-group">
+                    <li class="list-group-item bg-transparent w-75 experience-item">Supported in equipment changeover and prepared the machine for the model plant production</li>
+                    <li class="list-group-item bg-transparent w-75 experience-item">Designed test fixtures and jigs with optical sensors and pneumatic/electric actuator to support testing processes</li>
+                    <li class="list-group-item bg-transparent w-75 experience-item">Traveled to Asia to gain manufacturing knowledge for factory planting</li>
+                    <li class="list-group-item bg-transparent w-75 experience-item">Assisted in design and development of new features on the existing equipment to improve the manufacturing processes</li>
+					<li class="list-group-item bg-transparent w-75 experience-item">Assembled and commissioned testing equipment</li>
+					<li class="list-group-item bg-transparent w-75 experience-item">Assisted in carrying out DOE for processes, such as resistance welding, beading, etc.</li>
+                </ul>
+                <p class="duration"><em>Oct. 2022 – May 2024</em></p>
+            </div>
+            
+            <div class="carousel-item container-fluid">
                 <p class="experience-title"><strong>Mechanical/Manufacturing Engineer</strong>, Advanced Intelligent Systems, Burnaby, BC</p>
                 <ul class="list-group">
                     <li class="list-group-item bg-transparent w-75 experience-item">Assembled the prototype in accordance to the design specification and assisted in shop floor management</li>
@@ -316,7 +340,7 @@
         <a href="#footer" data-toggle="tooltip" title="call me"><span class="footer-icon fas fa-mobile"></span></a>
         <a href="https://www.linkedin.com/in/matthew-lee7/" data-toggle="tooltip" title="LinkedIn Profile"><span class="footer-icon fab fa-linkedin"></span></a>
         <a href="mailto:tjmatthew.lee@gmail.com" data-toggle="tooltip" title="or email me"><span class="footer-icon fas fa-envelope"></span></a>
-        <p>© Copyright 2022 Matthew Lee</p>
+        <p>© Copyright 2024 Matthew Lee</p>
     </div>
 </footer>
 
